chore: change id

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "yt-playlist-duration@noahdunbar.com"
+      "id": "youtube-playlist-duration@noahdunbar.com"
     }
   }
 }
